2013-08-06 Massimo Manghi <mxmanghi@apache.org>
    * rivetcmds/rivetCore.c,rivetInspect.c: moved core commands into this new directory. 
    Their code is (nearly) independent from Apache version and in future it might be shared
    between different versions/branches of the module
    * src/apache-2/Makefile.am: changed reference to rivetCore.c and rivetConf.c to 
    their new position and new names
    * src/apache-2/mod_rivet.c: conditional compilation to Tcl_InitIdentifier might
    help preserving event loop on Unices where no pthreads_atfork call exists (Bug #55153)
    * configure.ac: Tcl version checked to detect when the notifier might
    not be working (Tcl < 8.5.15 and Tcl < 8.6.1). In case a warning message is printed 

2013-07-19 Massimo Manghi <mxmanghi@apache.org>
    * tests/parse.test,parsestring.rvt: adding test for 'parse -string' variant
    to Rivet command 'parse'

2013-07-17 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.[h|c],rivetCore.c: reverting new command 'parsestr' and
    turning string parsing command into the support for the new -string modifier of the 
    ordinary parse command

2013-07-06 Massimo Manghi <mxmanghi@apache.org>
    * src/parser/parserPkgInit.c: commands are created through the RIVET_OBJ_CMD macro
    * rivet/packages/tclrivet/tclrivet.tcl: loading the rivetparser library caused 
    weird side effects and the interpreter failed when this package was required
    by a script. It's still to be understood why librivetparser was loaded using
    command 'load' in tclrivet.tcl
    * src/apache-2/mod_rivet.c: reverting an attempt to include rivetparser
    as package required by default. 

2013-07-05 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: changed the default path for installation dir 
    * doc/xml/commands.xml: add manual page for command ::rivet::xml

2013-06-28 Massimo Manghi <mxmanghi@apache.org>