@@ -395,15 +395,6 @@ AX_COMPARE_VERSION([$TCL_VERSION],[eq],[8.6],[
     fi
 ] , )
 
-
-if test "$print_fileevent_msg" = "1"; then
-    AC_MSG_NOTICE([------------------------------------------------------------------------])
-    AC_MSG_NOTICE([The Tcl notifier (and consequently the event loop) might not be working ])
-    AC_MSG_NOTICE([in Rivet with Tcl $TCL_VERSION$TCL_PATCH_LEVEL using the 'prefork' MPM. ])
-    AC_MSG_NOTICE([Recommended versions are Tcl >= 8.5.15 or Tcl >= 8.6.1])
-    AC_MSG_NOTICE([------------------------------------------------------------------------])
-fi 
-
 # APACHE_VERSION
 #
 # let's determine whether we are building for apache1.x or apache2.x.
@@ -700,4 +691,14 @@ AC_CONFIG_FILES([Makefile src/Makefile src/librivet/Makefile src/parser/Makefile
 #    apache-2) AC_CONFIG_FILES([Makefile src/Makefile src/apache-2/Makefile doc/Makefile]) ;;
 #esac
 AC_OUTPUT
+
+if test "$print_fileevent_msg" = "1"; then
+    AC_MSG_NOTICE([========================================================================])
+    AC_MSG_NOTICE([                             WARNING!])
+    AC_MSG_NOTICE([========================================================================])
+    AC_MSG_NOTICE([The Tcl notifier (and consequently the event loop) might not be working ])
+    AC_MSG_NOTICE([in Rivet running with Tcl $TCL_VERSION$TCL_PATCH_LEVEL and with the 'prefork' MPM.])
+    AC_MSG_NOTICE([Recommended versions are Tcl >= 8.5.15 (8.5 version) or Tcl >= 8.6.1])
+    AC_MSG_NOTICE([========================================================================])
+fi 
 
